<resources>
    <string name="app_name">MovieApplication</string>
    <string name="lbl_discover">Discover</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_best_popular_film_and_serials">Best Popular Films and Serials</string>
    <string name="lbl_see_more"><u>See More</u></string>
    <string name="lbl_showcases">SHOWCASES</string>
    <string name="lbl_more_show"><u>MORE SHOW</u></string>
    <string name="lbl_best_actors">Best Actors</string>
    <string name="lbl_more_actors">MORE ACTORS</string>
    <string name="lbl_storyline">STORYLINE</string>
    <string name="lbl_actors">ACTORS</string>
    <string name="lbl_creators">CREATORS</string>
    <string name="lbl_more_creators"><u>MORE CREATORS</u></string>
    <string name="lbl_original_title">OriginalTitle: </string>
    <string name="lbl_type">Type:</string>
    <string name="lbl_production">Production:</string>
    <string name="lbl_premiere">Premiere:</string>
    <string name="lbl_description">Description:</string>
    <string name="lbl_about_film">About Film</string>
    <string name="lbl_search_movie">Please Enter Movie Name</string>
</resources>